add nama pegawai
